--- a/.gitignore
+++ b/.gitignore
@@ -368,7 +368,7 @@ MigrationBackup/
 .env.development.local
 .env.test.local
 .env.production.local
-.vscode
+./vscode
 
 npm-debug.log*
 yarn-debug.log*
